@@ -17,6 +17,8 @@ git-annex (6.20160420) UNRELEASED; urgency=medium
   * map: Changed colors; red is used for untrusted repositories and grey
     for dead.
   * version: Display OS version and architecture too.
+  * Propigate GIT_DIR and GIT_WORK_TREE environment to external special
+    remotes.
 
  -- Joey Hess <id@joeyh.name>  Thu, 28 Apr 2016 13:17:04 -0400
 
